--- a/main.css
+++ b/main.css
@@ -4,8 +4,10 @@
 body {
   background-color: #EEE;
   width:100%;
-  overflow:hidden;
   font-family: 'Helvetica';
+  -webkit-user-select:none;
+  -webkit-touch-callout:none;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 h1 {
@@ -13,25 +15,47 @@ h1 {
   font-weight: 100;
 }
 
-div.button {
-  margin: 25px auto;
-  width: 280px;
-  text-align: center;
-  background-color: #FFF;
-  padding: 10px;
-  font-size: 20px;
-  border: 1px solid #777;
-  border-radius: 5px;
+h3 {
+    margin: 10px 0 3px 5px;
+    font-weight: normal;
 }
 
-div#msg {
-  margin: 25px auto;
-  text-align:center;
+table.menu {
+    width: 100%;
+    background-color: #FFF;
+    border-collapse: collapse;
+}
+
+table.menu tr {
+    height: 30px;
+}
+
+table.menu td {
+    width: 50%;
+    padding: 12px;
+    border:1px solid #777;
+    text-align:center;
+}
+
+table.menu td.full {
+    width: 100%;
+}
+
+.active {
+    background-color: #0FF;
+}
+
+
+
+div#message {
+    text-align:center;
+    margin: 10px auto;
+}
+
+div#message.success {
   color: #00F;
 }
 
-div#errormsg {
-  margin: 25px auto;
-  text-align:center;
+div#message.fail {
   color: #F00;
 }
