--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
-* { margin:0; padding:0; }
-*:after { display:block; clear:both; }
+* {margin:0; padding:0;}
+*:after {display:block; clear:both;}
 
 body {
   background-color: #EEE;
@@ -35,6 +35,14 @@ table.menu td {
     padding: 12px;
     border:1px solid #777;
     text-align:center;
+}
+
+table.menu td:first-child {
+  border-left-style: none;
+}
+
+table.menu td:last-child {
+  border-right-style: none;
 }
 
 table.menu td.full {
